2004-09-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added another gimmick. You can select a fade
	checkbox on the options dialog and when tkchat looses focus it
	will fade to 50% transparency. On recieving focus again it'll
	switch back to opaque.

	* tkchat.tcl (::tkchat::Retrieve): Bug #1030051. Be more careful
	not to overwrite the current script if we fail to get something
	sensible from the web request.

	* tkchat.tcl (::tkchat::EditOptions): Added support for toplevel
	alpha transparency (supported in the most recent Tk on Win2k/XP).

2004-09-08  Kevin Kenny  <kennykb@acm.org>

	* tkchat.tcl (::tkchat::debug, ::tkchat::SetFont,
	::tkchat::ChangeFont): Changed the code to not trample on the
	fonts belonging to the style, but only the named fonts that tkchat
	uses.
	
2004-09-08  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: fixed a version problem with tile from ActiveTcl
	8.4.6.1 somehow missing [tile::availableThemes]

	* tkchat.tcl: kludged the addHelp a bit more by adding IP so the
	server command /ip password nick is added with the system tag.	
	
2004-09-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl (::tkchat::userPost): update tip url to use tip.tcl.tk

2004-08-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Updated tile theme handling to permit use of
	third-party theme packages.

2004-08-16  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Adjusted checkNick so it doesn't make the nick
	column width too wide if SomeoneHasAReallyLongNickLikeSomeIrcUsers.

2004-08-13  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Added a [catch] to checkPage to prevent it from
	stop updating after a temporary DNS failure. 

2004-08-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix a bug with overly greedy date string matching
	in the history parsing code.

2004-06-30  Pat Thoyts  <patthoyts@users.sourceforge.net>
