@@ -1,3 +1,7 @@
+2004-09-19  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Add user set-able value to fade too.
+
 2004-09-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Added another gimmick. You can select a fade
